# SportsFacts

./: .env.example  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md  sync.md
.github/: DEPLOYMENT.md
.github/workflows/: ci.yml
apps/ai-service/: README.md  package.json  pyproject.toml
apps/ai-service/app/: __init__.py  agent.py  config.py  consumer.py  main.py  pgstore.py  schemas.py  state.py  store.py  tools.py
apps/ai-service/tests/: fakes.py  test_agent.py  test_api.py  test_consumer.py  test_consumer_integration.py  test_tally.py
apps/gateway/: package.json  tsconfig.json
apps/gateway/scripts/: normalize-match.ts  smoke.mjs
apps/gateway/src/: config.ts  index.ts  matchData.ts  replayEngine.ts  server.test.ts  server.ts  wsEnvelope.ts
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Dashboard.tsx  types.ts  useGatewayStream.ts
data/normalized/: 3869685.json
openspec/changes/ai-service-kafka-consumer/: design.md  proposal.md  tasks.md
openspec/changes/kafka-streaming-swap/: proposal.md  tasks.md
openspec/changes/monorepo-scaffold/: design.md  tasks.md
openspec/specs/ai-fact-agent/: spec.md
openspec/specs/announcer-dashboard/: spec.md
openspec/specs/dev-environment/: spec.md
openspec/specs/event-bus/: spec.md
(+38 files in other folders)
