[project]
name = "sportsfacts-ai-service"
version = "0.0.0"
description = "SportsFacts AI fact-generation service (Claude + LangGraph tool-use agent)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.30",
    "langchain-anthropic>=0.3.5",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
